fix subject display on small screens

--- a/static/countdown.css
+++ b/static/countdown.css
@@ -69,6 +69,9 @@ a:hover {
 	right: 1%;
 	bottom: 0;
 	position: fixed;
+	text-align: right;
+	max-width: 75%;
+	max-width: calc(100% - 100px);
 }
 
 @media screen and (max-width: 28em) {
